# autorent

./: README.md  pyproject.toml
backend/libs/log/: __init__.py
backend/srvs/office/: manage.py
backend/srvs/office/office/: _settings.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
backend/srvs/office/office/migrations/: 0001_initial.py  0002_carmodel_post_delete_car.py  0003_city_company_place_rename_name_post_title_and_more.py  0006_post_latitude_post_longitude.py
