[tool.poetry]
name = "autorent"
version = "0.1.0"
description = ""
authors = ["aminbidad1 <amin.200.bidad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
environs = "^11.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
